# MyDepTree

./: CMakeLists.txt  README.md  appsettings.json  installer_script.nsi  main.cpp
DepTree/: DepTree.cpp  DepTree.h  PkgNode.cpp  PkgNode.h
PlantUml/: start.bat
test/: PlantUmlDepTEST.cpp
utils/: AdditionalFileLoader.h  Indicators.cpp  Indicators.h  InternetWorker.h  JsonManager.cpp  JsonManager.h  ZipWorker.h
utils/DepTree/: DepTree.cpp  DepTree.h  PkgNode.cpp  PkgNode.h
